--- a/public/css/main.css
+++ b/public/css/main.css
@@ -17,6 +17,7 @@ a:hover{
 }
 .navBar {
     width: 100%;
+    height:25px;
     background-color: #c41717; 
     padding:10px 0px 15px 0px;
 }
@@ -25,6 +26,7 @@ a:hover{
         font-weight: bold;
         font-size: 18pt;
         padding-left:15px;
+        float: left;
     }
     .logo:hover{
         text-decoration: underline;
@@ -150,4 +152,19 @@ button{
 .singleUser {
     background-color: white;
     padding: 15px;
+}
+
+/* Media Queries for mobile */
+@media (max-width: 800px) {
+    .navList{
+        float: none;
+        margin-top:35px;
+        margin-left:15px;
+    }
+    .navList ul li{
+        float: left;
+    }
+    .navBar{
+        height: 60px;
+    }
 }
