Fix: File Uploader
Add file path to display and uploads
Fix bug where issue with spaces in files/folders name in path

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -157,6 +157,11 @@ button{
 #uploadProgressBar::-webkit-progress-value { background: chartreuse; }
 #uploadProgressBar { background: chartreuse; }
 
+.currentPath {
+    float: left;
+    width: 100%;
+}
+
 /* Media Queries for mobile */
 @media (max-width: 800px) {
     .navList{
