--- a/public/css/messages.css
+++ b/public/css/messages.css
@@ -36,7 +36,7 @@
 .leftPanel{
     width: 100%;
     background: #c41717;
-    padding: 10px;
+    padding: 1px 10px 1px 10px;
 }
 .conversationWrapper{
     width: 100%;
@@ -71,9 +71,10 @@
 
 .messageWrapper{
     background: #efefef;
-    height: 45px;
     padding: 10px;
     cursor: pointer;
+    margin-bottom:10px;
+    margin-top:10px;
 }
 .userEmailAddress{
     width: 200px;
