--- a/public/css/tasker.css
+++ b/public/css/tasker.css
@@ -18,3 +18,14 @@
     cursor: pointer;
     color: #c41717;
 }
+
+.stepItem, .taskMember{
+    margin-left: 30px;
+}
+.taskMembers{
+    width: 100%;
+    float: left;
+}
+.taskMember{
+    float: left;
+}
